--- a/client/main.css
+++ b/client/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  background-image: linear-gradient(to bottom, #ffcaca, #9affab 154%);
   background-attachment: fixed;
 
   position: absolute;
@@ -25,7 +25,7 @@ body {
 
 header {
   background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
+  background-image: linear-gradient(to bottom, #12e080, #ecdff5 100%);
   padding: 20px 15px 15px 15px;
   position: relative;
 }
@@ -66,6 +66,23 @@ ul {
   margin: 0;
   padding: 0;
   background: white;
+}
+
+.novote {
+  float: right;
+  background: none;
+  font-size: 1em;
+  border: none;
+  position: relative;
+}
+
+.upvoted {
+  float: right;
+  font-weight: bold;
+  background: none;
+  font-size: 1em;
+  border: none;
+  position: relative;
 }
 
 .delete {
